# assistant-core

./: .gitignore  LICENSE  README.md  main.py  old_main.py  prompts.py  pyproject.toml  settings.py
ai/: assistant.py  knowledge.py  memory.py  tools.py
ai/_knowledge/: base.py  pdf.py
ai/tools/: email.py  image.py
api/: dependencies.py  main.py
api/router/: search.py  vectorization.py
assistant_core/: assistant.py
docs/uml/: assistant.puml  base.puml  knowledge.puml  memory.puml  tools.puml
modules/: connectors.py  contextualizer.py  exceptions.py  types.py  vectorizers.py
modules/assistant_core/: assistant.py  knowledge.py  memory.py
modules/assistant_core/_knowledge/: base.py  pdf.py
modules/assistant_core/tools/: email.py  image.py
modules/db/: interfaces.py  managers.py  models.py
modules/utils/: cli.py  lib_utils.py  ollama.py
testing/: test.py  test_prompts.yaml
utils/: cli.py  ollama.py  system_prompts.py
